# postfixc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  postfixc
.cache/clangd/index/: arrlist.cpp.DACDB627E88DA203.idx  arrlist.h.E09A353FB2257441.idx  main.cpp.85534DBA9A0F7FE4.idx  main.cpp.D96BC828E48C3992.idx  stack.cpp.91BAF4A198604875.idx  stack.cpp.EA482DBE6FC9EE1C.idx  stack.h.27D55E5AA0F239FB.idx  stack.h.3112CD60A6805E33.idx
include/: stack.h
src/: main.cpp  stack.cpp
